add alembic and first routes
