# models/user.py
@@ -3,4 +3,6 @@ from app import db
 class User(db.Model):
     id = db.Column(db.Integer, primary_key=True)
     username = db.Column(db.String, unique=True, nullable=False)
-    email = db.Column(db.String)
+    email = db.Column(db.String, nullable = False)
+    password = db.Column(db.String, nullable = False)
+    salt = db.Column(db.String, nullable = False)
